# T-espresso

./: CMakeLists.txt  LICENSE.txt  README.md
lib/: CMakeLists.txt  Common.h  InstrumentDevice.cpp  InstrumentHost.cpp  LinkDeviceSupport.cpp  LocateKCalls.cpp  LocateKCalls.h  MarkAllDeviceForInline.cpp  PassCommon.h  Passes.h  RegisterStandardPasses.cpp  TraceIO.h  common.h  cutrace_io.h  trace-io.h
lib/compat/: LLVM-8.h
support/: CMakeLists.txt  device-support.cu  headerize.sh  host-support.cu
test/: Makefile
tools/: CMakeLists.txt  clang++-trace  cutracedump.c  trc2detail.sh  trc2sassi.sh
